# infodaemon

./: Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
