[package]
name = "sys-report-docker-img"
version = "0.1.0"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "infodeamon"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
sysinfo = "0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }